[package]
name = "safe"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
alloy-sol-types = { version = "0.6.2", features = [ "json" ] }
alloy-dyn-abi = "0.6.2"
alloy-json-abi = "0.6.2"
alloy-primitives = "0.6.2"
bincode = "1.3.3"
hex = "0.4"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "3232423" }
rand = "0.8.5"
rust-crypto-wasm = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"